[package]
name = "polar"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A command-line calculator that can also convert between units."
repository = "https://github.com/skycloudd/polar"
readme = "README.md"
exclude = [".github"]

[dependencies]
chumsky = "1.0.0-alpha.7"
codespan-reporting = "0.11.1"
lasso = { version = "0.7.3", features = ["multi-threaded"] }
malachite = "0.4.16"
owo-colors = "4.1.0"
rustc-hash = "2.0.0"
rustyline = "14.0.0"

[lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
alloc_instead_of_core = "warn"
std_instead_of_core = "warn"
